<resources>
    <string name="app_name">Musical Zodiac</string>
    <string name="content_description_image_about">image about</string>
    <string name="content_description_image_author">image author</string>
    <string name="content_description_image_interpreter">image interpreter</string>
    <string name="main_makrokosmos">Musical Zodiac</string>
    <string name="main_about">About</string>
    <string name="main_author">George Crumb</string>
    <string name="main_interpreter">Fabio Álvarez</string>
    <string name="contentDescription_expand">expand</string>
    <string name="title_songListActivity">Musical Zodiac</string>
    <string name="tab_name_volume_1">Volume one</string>
    <string name="tab_name_volume_2">Volume two</string>
    <string name="content_description_cd_image">CD image</string>
    <string name="time_format" translatable="false">%d:%02d</string>
    <string name="title_cd_title" translatable="false">Musical Zodiac</string>
    <string name="volumeITitle" translatable="false">Volume one</string>
    <string name="volumeIFirstSongTitle" translatable="false">1.- Primeval Sounds</string>
    <string name="volumeIFirstSongSubTitle" translatable="false">Genesis I</string>
    <string name="volumeISecondSongTitle" translatable="false">2.- Proteus</string>
    <string name="volumeIThirdSongTitle" translatable="false">3.- Pastorale</string>
    <string name="volumeIThirdSongSubTitle" translatable="false">From the Kingdom of Atlantis, ca. 10,000 B.C.</string>
    <string name="volumeIFourthSongTitle" translatable="false">4.- Crucifixus</string>
    <string name="volumeIFourthSongSubTitle" translatable="false">[SYMBOL]</string>
    <string name="volumeIFifthSongTitle" translatable="false">5.- The Phantom Gondolier</string>
    <string name="volumeISixthSongTitle" translatable="false">6.- Night-Spell I</string>
    <string name="volumeISeventhSongTitle" translatable="false">7.- Music of Shadows</string>
    <string name="volumeISeventhSongSubTitle" translatable="false">For Aeolian Harp</string>
    <string name="volumeIEighthSongTitle" translatable="false">8.- The Magic Circle of Infinity</string>
    <string name="volumeIEighthSongSubTitle" translatable="false">Moto Perpetuo [SYMBOL]</string>
    <string name="volumeINinthSongTitle" translatable="false">9.- The Abyss of Time</string>
    <string name="volumeITenthSongTitle" translatable="false">10.- Spring-Fire</string>
    <string name="volumeIEleventhSongTitle" translatable="false">11.- Dream Images</string>
    <string name="volumeIEleventhSongSubTitle" translatable="false">Love-Death Music</string>
    <string name="volumeITwelfthSongTitle" translatable="false">12.- Spiral Galaxy</string>
    <string name="volumeITwelfthSongSubTitle" translatable="false">[SYMBOL]</string>
    <string name="volumeIITitle" translatable="false">Volume two</string>
    <string name="volumeIIFirstSongTitle" translatable="false">1.- Morning Music</string>
    <string name="volumeIIFirstSongSubTitle" translatable="false">Genesis II</string>
    <string name="volumeIISecondSongTitle" translatable="false">2.- The Mystic Chord</string>
    <string name="volumeIIThirdSongTitle" translatable="false">3.- Rain-Death Variations</string>
    <string name="volumeIIFourthSongTitle" translatable="false">4.- Twin Suns</string>
    <string name="volumeIIFourthSongSubTitle" translatable="false">DoppelgÑnger aus der Ewigkeit [SYMBOL]</string>
    <string name="volumeIIFifthSongTitle" translatable="false">5.- Ghost-Nocturne: for the Druids of Stonehenge</string>
    <string name="volumeIIFifthSongSubTitle" translatable="false">Night-Spell II</string>
    <string name="volumeIISixthSongTitle" translatable="false">6.- Gargoyles</string>
    <string name="volumeIISeventhSongTitle" translatable="false">7.- Tora! Tora! Tora!</string>
    <string name="volumeIISeventhSongSubTitle" translatable="false">Cadenza Apocalittica</string>
    <string name="volumeIIEighthSongTitle" translatable="false">8.- A Prophecy of Nostradamus</string>
    <string name="volumeIIEighthSongSubTitle" translatable="false">[SYMBOL]</string>
    <string name="volumeIINinthSongTitle" translatable="false">9.- Cosmic wind</string>
    <string name="volumeIITenthSongTitle" translatable="false">10.- Voices from "Corona Borealis"</string>
    <string name="volumeIIEleventhSongTitle" translatable="false">11.- Litany of the Galactic Bells</string>
    <string name="volumeIITwelfthSongTitle" translatable="false">12.- Agnus Dei</string>
    <string name="volumeIITwelfthSongSubTitle" translatable="false">[SYMBOL]</string>
    <string name="zodiacSign_aries">Aries</string>
    <string name="zodiacSign_taurus">Taurus</string>
    <string name="zodiacSign_gemini">Gemini</string>
    <string name="zodiacSign_cancer">Cancer</string>
    <string name="zodiacSign_leo">Leo</string>
    <string name="zodiacSign_virgo">Virgo</string>
    <string name="zodiacSign_libra">Libra</string>
    <string name="zodiacSign_scorpio">Scorpio</string>
    <string name="zodiacSign_sagittarius">Sagittarius</string>
    <string name="zodiacSign_capricorn">Capricorn</string>
    <string name="zodiacSign_aquarius">Aquarius</string>
    <string name="zodiacSign_pisces">Pisces</string>
    <string name="contentDescription_zodiacSign">Zodiac symbol</string>
    <string name="infoAbout_title">About</string>
    <string name="infoAbout_body">“Music is a system of proportions in the service of a spiritual impulse”\nGeorge Crumb\n\n
        Makrokosmos I &amp; II (1972/73) is one of the most complete and influential cycles of the new technical resources of the piano from the latter twentieth century.\n\n
        The first volume is composed in memory of Béla Bartok (1881 - 1945) and dedicated to the pianist David Burge (1930 - 2013) and the second in memory of Gustav Mahler (1860 - 1911) and dedicated to the pianist Robert Miller (1930) - 1981).\n\n
        Each piece is assigned a zodiac sign reflecting his preoccupation with time and space.\nEach volume is divided into three parts, themselves sectioned into four parts that are to be played without interruption.  Crumb designed the fourth piece of each part in the form of a symbol in relation to the composition. In the first volume: Crucifixus as a cross, The Magic Circle of Infinity as circle and Spiral Galaxy as a spiral (picture on the back cover).\n\n
        Both volumes subtitled: Twelve pieces of fantasy after the zodiac for amplified piano. Twenty-four pieces that constitute a massive and detailed exploration of the sonorous possibilities of the piano, creating a virtuous synthesis between the conventional pianism (keyboard) and the unconventional (inside the piano), including the pianist through whispers, whistles, chants or shouts.\n\n
        Crumb exploits all the pianistic color tones imaginable on the keyboard and inside the piano by traversing the entire pitch range of the instrument, using the three pedals, exploiting an (extraordinarily wide dynamic range through amplification), using the pianist\'s hands to strike, pluck and scrape the strings and through the use of objects: chains, glass tumblers, metal plectrums, metal thimbles, sheets of paper or a wire brush.\n
        Fabio Álvarez\n\n
        George Crumb, Makrokosmos Volume I Notes*:\n
        “The title and format of my Makrokosmos reflect my admiration for two great 20th century composers of piano music – Béla Bartók and Claude Debussy. I was thinking, of course, of Bartók\'s Mikrokosmos and Debussy\'s 24 Preludes. However, these are purely external associations, and I suspect that the “spiritual impulse” of my music is more akin to the darker side of Chopin, and even to the child-like fantasy of Schumann.\n\n
        And then there is always the question of the “larger world” of concepts and ideas which influence the evolution of a composer\'s language. While composing Makrokosmos, I was aware of certain recurrent haunting images. At times quite vivid, at times vague and almost subliminal, these images seemed to coalesce around the following several ideas (given in no logical sequence, since there is none): the “magical properties” of music; the problem of the origin of evil; the “timelessness” if of time; a sense of the profound ironies of life (so beautifully expressed in the music of Mozart and Mahler); the haunting words of Pascal: “Le silence éternel des espaces infinis m\'effraie” (“The eternal silence of infinite space terrifies me”); and these few lines of Rilke: “Und in den Nächten fállt die schwere Erde aus allen Sternen in die Einsamkeit. Wir alle fallen. Und doch ist Einer, welcher dieses Fallen unendlich sanft in seinen Händen halt” (And in the nights the heavy earth is falling from all the stars down into loneliness. We are falling. And yet there is One who holds this falling endlessly gently in his hands”).\n\n
        Each of the twelve “fantasy-pieces” is associated with a different sign of the zodiac and with the initials of a person born under that sign. I had whimsically wanted to pose an “enigma” with these subscript initials; however, my perspicacious friends quickly identified the Aries of Spring-Fire as David Burge, and the Scorpio of The Phantom Gondolier as myself.\n\n
        Makrokosmos, Volume I was premiered at Colorado College (in Colorado Springs) on February 8, 1973.\n
        Makrokosmos, Volume II was premiered by Robert Miller in New York City (Alice Tully Hall) on November 12, 1974.\n\n
        *Excerpted from notes written for the Nonesuch recording of Makrokosmos Volume I (recorded performance by David Burge, Nonesuch H-71293).\n\n
    </string>
    <string name="infoAuthor_title">George Crumb</string>
    <string name="label_next">next</string>
    <string name="label_previous">previous</string>
</resources>