<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.keltapps.makrokosmos.menu.presentation.viewmodel.MenuViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/makrokosmosContainer"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->viewModel.openMakrokosmos()}">

                <ImageView
                    android:id="@+id/imageViewMakrokosmos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_cd_image"
                    android:scaleType="centerCrop"
                    app:imageDrawable="@{@drawable/cd_cover}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/main_makrokosmos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_makrokosmos"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="26sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/aboutContainer"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->viewModel.openAbout()}">

                <ImageView
                    android:id="@+id/imageViewAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_image_about"
                    android:scaleType="centerCrop"
                    app:imageDrawable="@{@drawable/about}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/main_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_about"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="26sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/authorContainer"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->viewModel.openAuthor()}">

                <ImageView
                    android:id="@+id/imageViewAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_image_author"
                    android:scaleType="centerCrop"
                    app:imageDrawable="@{@drawable/author}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/main_author" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_author"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="26sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/interpreterContainer"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{()->viewModel.openInterpreter()}">

                <ImageView
                    android:id="@+id/imageViewInterpreter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_image_interpreter"
                    android:scaleType="centerCrop"
                    app:imageDrawable="@{@drawable/interpreter}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/main_interpreter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_interpreter"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="26sp" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</layout>