<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.keltapps.makrokosmos.song.presentation.detail.viewmodel.SongDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/ripple"
                android:layout_width="@dimen/width"
                android:layout_height="@dimen/width"
                android:layout_gravity="center"
                app:color="@{viewModel.zodiacSignColor}"
                app:isPlaying="@{viewModel.isPlaying}"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/ripple" />
        </FrameLayout>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescription_zodiacSign"
            app:imageDrawable="@{viewModel.zodiacSignViewModel.zodiacSign}"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="@+id/frameLayout" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:max="@{viewModel.mediaSeekBarViewModel.maxValue}"
            android:onStopTrackingTouch="@{() -> viewModel.mediaSeekBarViewModel.stopTracking()}"
            android:onStartTrackingTouch="@{() -> viewModel.mediaSeekBarViewModel.startTracking()}"
            android:progress="@={viewModel.mediaSeekBarViewModel.progress}"
            app:layout_constraintBottom_toTopOf="@+id/position"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintVertical_bias="0.71000004" />

        <LinearLayout
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar">

            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.mediaSeekBarViewModel.progressFormatted}"
                android:textAppearance="@style/AppTheme.TextAppearance.Body"
                tools:text="0:00" />

            <TextView
                android:id="@+id/songDetailDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{viewModel.mediaSeekBarViewModel.duration}"
                android:textAppearance="@style/AppTheme.TextAppearance.Body"
                tools:text="3:23" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@{viewModel.title}"
            android:textAppearance="@style/AppTheme.TextAppearance.Title"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/position"
            tools:text="Title" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@{viewModel.subTitle}"
            android:textAppearance="@style/AppTheme.TextAppearance.SubTitle"
            app:layout_constraintBottom_toTopOf="@+id/zodiacSignName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:text="SubTitle" />

        <TextView
            android:id="@+id/zodiacSignName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@{viewModel.zodiacSignName}"
            android:textAppearance="@style/AppTheme.TextAppearance.Body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Zodiac Sign name" />

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacSignName"
            app:layout_constraintVertical_bias="0.7">

            <ImageView
                android:id="@+id/skipPrevious"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/label_previous"
                android:focusable="true"
                android:onClick="@{()->viewModel.audioViewModel.skipToPrevious()}"
                android:src="@drawable/ic_skip_previous"
                android:tint="@android:color/white" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{()->viewModel.audioViewModel.playOrPause()}">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/playOrPauseSongDetail"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    app:lottie_rawRes="@raw/play_pause"
                    app:playPauseAnimation="@{viewModel.isPlaying}" />
            </FrameLayout>

            <ImageView
                android:id="@+id/skipNext"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/label_next"
                android:focusable="true"
                android:onClick="@{()->viewModel.audioViewModel.skipToNext()}"
                android:src="@drawable/ic_skip_next"
                android:tint="@android:color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>